# phdeem

./: .gitignore  CMakeLists.txt  README.md
examples/: cpp_example.cpp  full_example.c
src/: cpphdeem.hpp  phdeem.c  phdeem.h
src/example/: testPhdeem.c
tests/: test_hash.cpp
